lintian (1.24.1) unstable; urgency=low

  * unpack/unpack-binpkg-l1:
    + [FL] Don't include version number from Source: field in
      the source symlink.  Noted by RA.  (Closes: #485474)
  
  * reporting/checkout-release:
    + [FL] New helper script for lintian.d.o maintainance.
  * reporting/config:
    + [FL] Generate files in $HOME/www directly instead
      of $HOME/www/reports.
  * reporting/html_reports:
    + [FL] Allow inclusion of the new shared templates by
      convenient functions. Remove some duplicated data
      setting while I'm on it.
    + [FL] Generate the manual and lintian.log symlinks
      dynamically, so that we don't need the reports subdirectory
      anymore.  Also generate a reports -> . symlink for
      backwards compatibility.
  * reporting/templates/{head,foot}.tmpl:
    + [FL] New templates meant for inclusion by other templates
      for common header and footer parts
  * reporting/templates/index.tmpl:
    + [FL] Remove obsolete reports/ subdirectory from the links.    
  * reporting/templates/*.tmpl:
    + [FL] Replace common headers/footers with calls to the
      new head()/foot() functions.

 --

lintian (1.24.0) unstable; urgency=low

  The "Policy 3.8.0, infrastructure evolution, and real web design"
  release.
  
  * checks/binaries:
    + [RA] Fix code for filtering out NSS modules from SONAME checks.
    + [RA] When checking SONAMEs against package names, convert all
      underscores to dashes, not just the first one.  Thanks, Gonéri Le
      Bouder.  (Closes: #482450)
    + [RA] Remove several-sonames-in-same-package.  This is frequently not
      an error and Lintian doesn't have enough information to know.
  * checks/common_data.pm:
    + [RA] armel is now a standard architecture.
    + [RA] Remove %known_obsolete_packages, now handled via data.
    + [RA] Merge %non_standard_archs into %known_archs.
  * checks/control-file{.desc,}:
    + [RA] Check for self-dependencies in the source package since the